2011-05-01  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Maciej Stachowiak.

        Crash in AccessibilityRenderObject while viewing PDFs in iframes
        https://bugs.webkit.org/show_bug.cgi?id=59629

        Could not reproduce this crash, but it's quite clear how it could happen.

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::accessibilityHitTest):

Canonical link: https://commits.webkit.org/75119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85414 268f45cc-cd09-0410-ab3c-d52691b4dbfc